# ferese

./: .gitignore  CMakeLists.txt  CMakeSettings.json  README.md
.github/workflows/: cmake.yml
apps/: CMakeLists.txt  ferese_win32.cpp
include/core/: types.h
tests/: CMakeLists.txt
tests/src/: example_test.cpp
